Modified the flex-boxes in attempt to make the flow and alingment of section1 correct I am currently trying to change the section subections flex box to align the Hero title with the top of the image to its right

--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,9 @@
 	align-content: space-between;
 }
 .section1Subcontainer,
-.section1Subcontainer2 {
+.section1Subcontainer2,
+.section1Subcontainer3,
+.section1Header {
 	display: flex;
 	align-content: space-around;
 	margin: 13px;
@@ -29,5 +31,23 @@
 }
 
 .section-1-container {
+	justify-content: space-evenly;
+}
+button {
+	width: fit-content;
+}
+.section1Subcontainer3 {
 	justify-content: center;
+	margin-left: 400px;
+}
+
+.section1Header {
+	margin-left: 0%;
+	margin-right: 180px;
+}
+
+.section-1-container2 {
+	justify-content: center;
+	align-items: flex-start;
+	justify-items: flex-start;
 }
